# mapnavigation

backend/: CMakeLists.txt  main.cpp
backend/data/: mapofgx.osm
backend/src/: OsmParser.cpp  OsmParser.h  PathFinder.cpp  PathFinder.h
backend/src/API/: routes.cpp
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: mapview.vue
